<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activity.rentee_registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:id="@+id/back"
            android:src="@drawable/ic_back"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:id="@+id/logo"
            android:src="@drawable/ic_hotel_key"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/details"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_fname"
                    android:textSize="25sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:id="@+id/renti_fname"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_lname"
                    android:textSize="25sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:id="@+id/renti_lastname"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/enter_gender"
                        android:textColor="@color/black"
                        android:textSize="25sp"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:id="@+id/renti_gender">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textSize="25sp"
                            android:id="@+id/renti_male_gender"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fmale"
                            android:textSize="25sp"
                            android:id="@+id/renti_fmale_gender"/>
                    </RadioGroup>

                </LinearLayout>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_father_name"
                    android:textSize="25sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:id="@+id/renti_father_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile"
                    android:inputType="phone"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/renti_mobile_number"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_whatsapp_number"
                    android:inputType="phone"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/renti_whatsapp_number"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_pmobile"
                    android:textSize="25sp"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:id="@+id/renti_parents_mobile"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_occupation"
                    android:textSize="25sp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/renti_occupation"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_Permanent_address"
                    android:textSize="25sp"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black"
                    android:id="@+id/renti_permanet_address"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_office_address"
                    android:textSize="25sp"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black"
                    android:id="@+id/renti_office_address"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_pg_name"
                    android:textSize="25sp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/renti_pg_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_room_number"
                    android:textSize="25sp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/renti_room_number"
                    tools:ignore="TextFields" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_bed_number"
                    android:textSize="25sp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/renti_bed_number"
                    tools:ignore="TextFields" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">



                  <LinearLayout
                      android:layout_width="200dp"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center"
                      android:layout_marginLeft="5dp"
                      android:gravity="center">

                      <ImageView
                          android:layout_width="100dp"
                          android:layout_height="100dp"
                          android:id="@+id/renti_profile"
                          android:src="@drawable/ic_id_card"/>

                      <Button
                          android:layout_marginTop="10dp"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/upload_id_proof"
                          android:textColor="@color/black"
                          android:layout_gravity="center"
                          android:background="@color/colorPrimary"
                          android:id="@+id/renti_id_button"/>

                  </LinearLayout>

                </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:gravity="center"
                   android:layout_marginTop="50dp"
                   android:layout_gravity="center"
                   android:layout_marginBottom="100dp">

                   <Button
                       android:layout_width="200dp"
                       android:layout_height="wrap_content"
                       android:text="@string/submit"
                       android:background="@color/colorPrimary"
                       android:id="@+id/renti_submit" />

                   <Button
                       android:layout_width="200dp"
                       android:layout_marginLeft="5dp"
                       android:layout_height="wrap_content"
                       android:text="@string/clear"
                       android:background="@color/colorPrimary"
                       android:id="@+id/renti_clear" />

               </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>