<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.show_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:id="@+id/back"
                android:src="@drawable/ic_back"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:id="@+id/logo"
                android:src="@drawable/ic_hotel_key"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/details"
                android:textSize="25sp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_whatsapp"
                android:id="@+id/whatsapp"
                android:layout_marginLeft="10dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_telephone"
                android:id="@+id/call"
                android:layout_marginLeft="10dp"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:id="@+id/delete"
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:src="@drawable/ic_id_card"
                            android:id="@+id/id"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/id"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:textSize="22sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

            </LinearLayout>

                <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/black"
                       android:textSize="22sp"
                       android:text="@string/first"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="match_parent"
                       android:id="@+id/fname_result"
                       android:textSize="22sp"
                       android:layout_marginLeft="10dp"
                       android:hint="@string/first_name"/>
               </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/last"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/lname_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/last_name"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/gender"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/gender_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_gender"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/father"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/father_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_father_name"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/mobile"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/mobile_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_mobile"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/whatsapp_number"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/whatsapp_mobile_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_mobile"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/parents"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/parents_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_pmobile"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/occupation"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/occupation_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_occupation"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/p_add"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/p_add_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_Permanent_address"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/c_add"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/current_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_office_address"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/PG_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/pg_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_pg_name"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/Room_number"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/room_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_room_number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/Bed_number"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/bed_result"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/enter_bed_number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/update"
                        android:text="@string/update"
                        android:background="@color/colorPrimary"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/pdf"
                        android:layout_marginLeft="10dp"
                        android:text="@string/pdf"
                        android:background="@color/colorPrimary"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/alert"
                    android:text="@string/massage"
                    android:layout_marginBottom="50dp"
                    android:background="@color/red"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>